IndexedDBのトランザクションのエラーハンドリング追加

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <html lang="ja">
 
 <head>
-    <title>IndexedDB-Test</title>
+    <title>IndexedDB Limit Test</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <script src="boot/bundle.js"></script>
@@ -18,7 +18,7 @@
         <input id="readTest" type="button" value="読込テスト" />
         <input id="deleteTest" type="button" value="削除テスト" />
         <br>
-        <textarea id="output-log" rows="40" cols="60" spellcheck="false"></textarea>
+        <textarea id="output-log" rows="25" cols="80" spellcheck="false"></textarea>
     </div>
 </body>
 
